--- a/src/Boogops.Web/ClientApp/package.json
+++ b/src/Boogops.Web/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@mui/material": "^5.2.3",
     "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.7.2",
@@ -16,8 +17,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "subscriptions-transport-ws": "^0.11.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@shopify/eslint-plugin": "^41.0.1",
@@ -28,6 +28,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "eslint": "^8.3.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.1.3"
   },
   "scripts": {
