--- a/src/Boogops.Web/ClientApp/package.json
+++ b/src/Boogops.Web/ClientApp/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "@mui/styles": "^5.2.3",
     "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.7.2",
