--- a/src/Boogops.Web/ClientApp/package.json
+++ b/src/Boogops.Web/ClientApp/package.json
@@ -12,13 +12,14 @@
     "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.7.2",
+    "history": "5",
     "http-proxy-middleware": "^2.0.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "6",
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
