--- a/src/Boogops.Web/ClientApp/package.json
+++ b/src/Boogops.Web/ClientApp/package.json
@@ -8,7 +8,6 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
-    "@mui/styles": "^5.2.3",
     "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.7.2",
@@ -18,11 +17,13 @@
     "prop-types": "^15.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.2.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "6",
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "web-vitals": "^2.1.2"
   },
   "devDependencies": {
     "@shopify/eslint-plugin": "^41.0.1",
@@ -40,11 +41,6 @@
     "start": "rimraf ./build && react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint ./src/"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
   },
   "browserslist": {
     "production": [
