--- a/src/Boogops.Web/ClientApp/package.json
+++ b/src/Boogops.Web/ClientApp/package.json
@@ -6,6 +6,10 @@
     "@apollo/client": "^3.4.16",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@iconify/icons-ant-design": "^1.1.0",
+    "@iconify/icons-eva": "^1.1.0",
+    "@iconify/icons-ic": "^1.1.10",
+    "@iconify/react": "^3.0.1",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
     "clsx": "^1.1.1",
