--- a/src/Boogops.Web/ClientApp/package.json
+++ b/src/Boogops.Web/ClientApp/package.json
@@ -12,6 +12,7 @@
     "@iconify/react": "^3.0.1",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "@mui/system": "^5.2.3",
     "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.7.2",
@@ -27,6 +28,7 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
